--- a/style.css
+++ b/style.css
@@ -11,3 +11,19 @@
     color: green;
     font-size: 15px;
 }
+
+@media screen  and (min-width: 425px) {
+    .corpo{
+        background-color: azure;
+    }
+    
+    .titulo{
+        color: greenyellow;
+        font-size: 50px;
+    }
+    
+    .link{
+        color: green;
+        font-size: 15px;
+    }
+}
