--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .corpo{
-    background-color: azure;
+    background-color: rgb(81, 194, 194);
 }
 
 .titulo{
-    color: greenyellow;
+    color: rgb(7, 60, 73);
     font-size: 50px;
 }
 
