--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     font-size: 50px;
 }
 
-.link{
+.paginas{
     color: rgb(209, 214, 209);
     font-size: 15px;
 }
@@ -23,7 +23,7 @@
         font-size: 50px;
     }
     
-    .link{
+    .paginas{
         color:rgb(209, 214, 209);
         font-size: 15px;
     }
