--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 .lista{
     align-items: center;
     list-style: none;
-    align-self: auto;
-    align-content: 3px;
+    align-self: center;
+    align-content: center;
 }
 
 .titulo{
