--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
 .lista{
     align-items: center;
     list-style: none;
-    align-self: center;
-    align-content: center;
-    display: inline block;
+    padding: 0;
+    margin: 0 10px;
+    display: inline;
 }
 
 .titulo{
