--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
 }
 
 .paginas{
+    font-size: 30px;
     color: rgb(209, 214, 209);
-    font-size: 30cm;
     display: inline;
     margin: 0 10px;
 }
