--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 .corpo{
-    background-color: rgb(0, 0, 0);
+    background-color: cadetblue;
 }
 
 .cabecalho{
@@ -34,7 +34,7 @@
 
 @media screen  and (min-width: 425px) {
     .corpo{
-        background-color: rgb(81, 194, 194);
+        background-color: cadetblue;
     }
     }
     
