--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     background-color: rgb(40, 109, 87);
     text-align: center;
     padding: 0 10px;
-    margin: 0;
+    margin: 5px;
 }
 
 .titulo{
