--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 .cabecalho{
     background-color: rgb(40, 109, 87);
     text-align: center;
-    padding: 0 0px;
-    margin: 0;
+    padding: 0 0;
+    margin: 0 0;
 }
 
 .titulo{
