--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .cabecalho{
     background-color: rgb(40, 109, 87);
     text-align: center;
-    padding: 0 10px;
+    padding: 10px 0;
     margin: 0;
 }
 
