--- a/style.css
+++ b/style.css
@@ -13,11 +13,14 @@
 .titulo{
     color: rgb(7, 60, 73);
     font-size: 50px;
+    margin:0;
+    padding: 0;
 }
 
 .lista{
     list-style: none;
     padding: 0;
+    margin:0 10px;
     
 }
 
