--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ titulo2{
         color: rgb(7, 60, 73);
         font-size: 50px;
     }
+
+    titulo2{
+        color: white;
+    }
     
     .paginas{
         color:rgb(209, 214, 209);
