--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
 
 .titulo2{
     color: rgb(7, 60, 73);
+    font-size: 35px;
 }
 
 .paragrafo{
@@ -44,6 +45,7 @@
 
 .subtitulo{
     color:rgb(11, 90, 110) ;
+    font-size: 32px;
 }
 
 
