--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
 .titulo2{
     color: rgb(7, 60, 73);
     font-size: 35px;
+    border: dashed;
 }
 
 .paragrafo{
@@ -46,7 +47,9 @@
 .subtitulo{
     color:rgb(11, 90, 110) ;
     font-size: 32px;
+   
 }
+.item-lista2{ list-style-type: circle; color:white;}
 
 
 
