--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 .subtitulo{
     color:rgb(11, 90, 110) ;
     font-size: 32px;
-    list-style-type: circle white;
+    list-style-type: white;
 }
 
 
