--- a/style.css
+++ b/style.css
@@ -56,14 +56,13 @@
 
 .item-lista{
     list-style-type: decimal;
-    font-size: 18px;
-    color:rgb(40, 109, 87)
-}
+    font-size: 25px;
+    color:rgb(11, 90, 110);
 
 .item-texto{
     color:black;
     list-style-type: circle white;
-    font-size: 13px;
+    font-size: 20px;
 }
 
 
