--- a/tecnologia.css
+++ b/tecnologia.css
@@ -6,8 +6,8 @@
 .titulo{
     color: rgb(7, 60, 73);
     font-size: 50px;
-    margin:0;
-    padding: 0;
+   align-items: center;
+   border: dashed (8, 66, 77);
 }
 
 
