--- a/tecnologia.css
+++ b/tecnologia.css
@@ -7,7 +7,7 @@
     color: rgb(7, 60, 73);
     font-size: 50px;
    align-items: center;
-   border: dashed (8, 66, 77);
+   border: dashed rgb(7, 84, 70);
 }
 
 
