--- a/tecnologia.css
+++ b/tecnologia.css
@@ -6,7 +6,7 @@
 .titulo{
     color: rgb(7, 60, 73);
     font-size: 50px;
-   align-items: center;
+   text-align: center;
    border: dashed rgb(7, 84, 70);
 }
 
