--- a/inicio.css
+++ b/inicio.css
@@ -18,3 +18,29 @@
     width: 0 10px;
 }
 
+
+
+
+
+
+
+
+@media screen  and (min-width: 425px) {
+    .corpo{
+        background-color: cadetblue;
+    }
+    }
+    
+    .titulo{
+        color: rgb(7, 60, 73);
+        font-size: 50px;
+    }
+
+    titulo2{
+        color: white;
+    }
+    
+    .paginas{
+        color:rgb(209, 214, 209);
+        font-size: 15px;
+    }
