--- a/tecnologia.css
+++ b/tecnologia.css
@@ -16,6 +16,20 @@
     font-size: 32px;
 }
 
+.titulo2{
+    color: rgb(39, 72, 75);
+    font-size: 40px;
+}
+
+.titulo3{
+    color: aquamarine;
+    font-size: 45px;
+}
+.paragrafos{
+    color: black;
+    font-size: 30px;
+
+}
 
 
 
