--- a/tecnologia.css
+++ b/tecnologia.css
@@ -55,3 +55,18 @@
         color:rgb(209, 214, 209);
         font-size: 15px;
     }
+
+    .titulo2{
+        color: rgb(39, 72, 75);
+        font-size: 40px;
+    }
+    
+    .titulo3{
+        color: aquamarine;
+        font-size: 45px;
+    }
+    .paragrafos{
+        color: black;
+        font-size: 30px;
+    
+    }
