--- a/tecnologia.css
+++ b/tecnologia.css
@@ -12,7 +12,7 @@
 
 
 .subtitulo{
-    color:rgb(11, 90, 110) ;
+    color:rgb(39, 72, 75);
     font-size: 32px;
 }
 
@@ -47,6 +47,11 @@
         font-size: 50px;
     }
 
+    .subtitulo{
+        color:rgb(39, 72, 75);
+        font-size: 32px;
+    }
+
     titulo2{
         color: white;
     }
@@ -58,15 +63,15 @@
 
     .titulo2{
         color: rgb(39, 72, 75);
-        font-size: 40px;
+        font-size: 35px;
     }
     
     .titulo3{
         color: aquamarine;
-        font-size: 45px;
+        font-size: 30px;
     }
     .paragrafos{
         color: black;
-        font-size: 30px;
+        font-size: 25px;
     
     }
