--- a/tecnologia.css
+++ b/tecnologia.css
@@ -47,6 +47,10 @@
         font-size: 50px;
     }
 
+    .paragrafo{
+        font-size: 25px;
+    }
+
     .subtitulo{
         color:rgb(39, 72, 75);
         font-size: 32px;
