--- a/sugestoes.css
+++ b/sugestoes.css
@@ -18,7 +18,13 @@
     
     .titulo{
         color: rgb(7, 60, 73);
-        font-size: 50px;
+        font-size: 45px;
+    }
+
+    .paragrafos{
+        color: rgb(19, 78, 78);
+        font-size: 40px;
+    
     }
 
     .titulo2{
