--- a/sugestoes.css
+++ b/sugestoes.css
@@ -26,7 +26,7 @@
     .titulo{
         color: rgb(58, 170, 160);
         font-size: 45px;
-        border: double;
+        border: 15px double;
     }
 
     .paragrafos{
