--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     text-align: center;
     padding: 10px 0;
     margin: 0;
+    border: 15px double;
 }
 
 .titulo{
@@ -15,6 +16,7 @@
     font-size: 50px;
     margin:0;
     padding: 0;
+    border: dotted;
 }
 
 .lista{
@@ -37,7 +39,7 @@
 .titulo2{
     color: rgb(7, 60, 73);
     font-size: 35px;
-    border: dashed rgb(40, 109, 87);
+    border: dashed rgb(0, 0, 0);
 }
 
 .paragrafo{
