--- a/sugestoes.css
+++ b/sugestoes.css
@@ -50,8 +50,7 @@
     }
 
     .imagem {
-        color:rgb(39, 72, 75) ;
-        padding: 0 10px;
-        width: 0%;
+        width: 320;
+         height: 270;
     }
     
