--- a/sugestoes.css
+++ b/sugestoes.css
@@ -50,7 +50,7 @@
     }
 
     .imagem {
-        width: 320px;
-         height: 2400px;
+        width: 320;
+         height: 4400px;
     }
     
