--- a/sugestoes.css
+++ b/sugestoes.css
@@ -50,7 +50,8 @@
     }
 
     .imagem {
-        width: 320 ;
-         height: 4400;
+        width: 320;
+        padding: 1000;
+         height: 2000;
     }
     
