--- a/sugestoes.css
+++ b/sugestoes.css
@@ -50,7 +50,7 @@
     }
 
     .imagem {
-        padding: 0 10px;
-        width: 0 100%;
+        padding: 10 0px;
+        width:  100%;
     }
     
