--- a/sugestoes.css
+++ b/sugestoes.css
@@ -50,8 +50,7 @@
     }
 
     .imagem {
-        border: 150px;
-        padding:0 80%;
-        width: 90%;
+        padding: 0 10px;
+    width: 60%;
     }
     
