--- a/inicio.css
+++ b/inicio.css
@@ -1,12 +1,12 @@
-@import url(<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">);
+@import url(<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">);
 
 
 .corpo{
     background-color: cadetblue;
 }
-
+.titulo{
+    font-family: Abril+Fatface;
+}
 .titulo2{
     font-size: 15px;
     color: white;
