--- a/inicio.css
+++ b/inicio.css
@@ -1,4 +1,4 @@
-@import url(<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">);
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="styleshee');
 
 
 .corpo{
