--- a/inicio.css
+++ b/inicio.css
@@ -5,7 +5,7 @@
     background-color: cadetblue;
 }
 .titulo{
-    font-family: Abril+Fatface;
+    font-family: "Abril+Fatface";
 }
 .titulo2{
     font-size: 15px;
