--- a/inicio.css
+++ b/inicio.css
@@ -47,7 +47,7 @@
     .titulo{
         color: rgb(19, 68, 80);
         font-size: 40px;
-        font-family:Abril+Fatface;
+        font-family: "Abril+Fatface";
     }
 
     titulo2{
